--- a/about.html
+++ b/about.html
@@ -44,8 +44,9 @@
     <div class="wrap">
       <h1 style="margin:0 0 10px">About us</h1>
       <p style="max-width:860px">
-        Somos <strong>Unique</strong>, una casa de experiencias a medida. Nacimos entre España y Londres
-        para conectar viajeros con anfitriones locales y diseñar itinerarios con criterio: claros, cuidados y sin fricción.
+        Somos <strong>Unique</strong> un proveedor de experiencias paquetizadas. Una empresa de reservas especializada en turismo experiencial para clientes británicos de alto poder adquisitivo.
+Ofrecemos paquetes completos con vuelos, transporte, actividades exclusivas y alojamiento en hoteles boutique y de alta gama en España. Nacimos entre España y Londres
+        para conectar viajeros con anfitriones locales de la manera más cómoda posible.
       </p>
     </div>
   </section>
@@ -63,8 +64,8 @@
           </p>
           <ul class="checklist">
             <li>Diseño a medida y presupuestos transparentes</li>
-            <li>Red curada de partners locales</li>
-            <li>Soporte cercano antes, durante y después</li>
+            <li>Red de partners locales excelente</li>
+            <li>Soporte cercano 24/7 antes, durante y después</li>
           </ul>
         </div>
         <div>
@@ -94,7 +95,7 @@
           <img src="./assets/img/Foto-Ramon-Borras.jpg" alt="Ramon Borras Yanez">
           <div class="pad">
             <strong>Ramon Borras Yanez</strong><br>
-            <span class="muted">Co-founder</span>
+            <span class="muted">COO & Co-founder</span>
             <p class="bio">
               Experiencia en desarrollo de negocio, ventas y finanzas.
               Fundador y ex-CEO de <em>Spaniard Barrels</em>. Ha vivido en Londres.
@@ -111,7 +112,7 @@
       <h2>Valores</h2>
       <div class="about-cards">
         <article class="about-card">
-          <h3>Curación</h3>
+          <h3>Excelencia</h3>
           <p>Seleccionamos experiencias auténticas con estándares de calidad y seguridad.</p>
         </article>
         <article class="about-card">
